--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,6 +3,10 @@
   "semi": false,
   "tabWidth": 2,
   "singleQuote": true,
+  "jsxSingleQuote": false,
+  "bracketSpacing": true,
   "printWidth": 100,
-  "trailingComma": "none"
+  "trailingComma": "all",
+  "arrowParens": "always",
+  "endOfLine": "auto",
 }
